@@ -1,3 +1,6 @@
+08/23/2013 OsiGrb
+  - fixed bug in deleting row or column names when deleting several rows/columns at once
+
 04/02/2013 OsiMsk
   - update to work with Mosek 7, too (contributed by Erling D. Andersen)
 
